# mortgagekit-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
src/: lib.rs  main.rs
src/api/: errors.rs  handlers.rs  mod.rs  routers.rs  routes.rs
src/calculators/: accelerated.rs  balloon.rs  floating.rs  interest_only.rs  mod.rs  standard.rs
src/models/: input.rs  mod.rs  repayment_info.rs  repayment_type.rs  schedule.rs  summary.rs
src/utils/: date.rs  decimal.rs  mod.rs
tests/: integration_tests.rs
